fix issue with chat dock not showing up

--- a/kornell-gwt/src/main/webapp/less/chat/chat.less
+++ b/kornell-gwt/src/main/webapp/less/chat/chat.less
@@ -36,6 +36,7 @@
 		height: ~"calc(100vh - 220px)";
 		min-height: 460px;
 		margin-top: 20px;
+		float: left;
 		.threadPanel {
 			width: @rightPanelWidth;
 			.threadPanelItemsScroll {
